--- a/space invaders.html
+++ b/space invaders.html
@@ -24,16 +24,35 @@
         const invaderSpeed = 1;
         const rowCount = 3;
         const columnCount = 5;
-
+        
         let ship = { x: canvas.width / 2 - shipWidth / 2, y: canvas.height - shipHeight - 10, width: shipWidth, height: shipHeight };
         let bullets = [];
         let invaders = [];
         let invaderDirection = 1;
+        let invaderMoveDown = false;
+
+        // Generate random color
+        function getRandomColor() {
+            const letters = '0123456789ABCDEF';
+            let color = '#';
+            for (let i = 0; i < 6; i++) {
+                color += letters[Math.floor(Math.random() * 16)];
+            }
+            return color;
+        }
 
         function createInvaders() {
             for (let r = 0; r < rowCount; r++) {
                 for (let c = 0; c < columnCount; c++) {
-                    invaders.push({ x: c * (invaderWidth + 10) + 30, y: r * (invaderHeight + 10) + 30, width: invaderWidth, height: invaderHeight });
+                    invaders.push({
+                        x: c * (invaderWidth + 10) + 30,
+                        y: r * (invaderHeight + 10) + 30,
+                        width: invaderWidth,
+                        height: invaderHeight,
+                        row: r,
+                        column: c,
+                        color: getRandomColor() // Assign a random color to each invader
+                    });
                 }
             }
         }
@@ -49,8 +68,10 @@
         }
 
         function drawInvaders() {
-            ctx.fillStyle = 'green';
-            invaders.forEach(invader => ctx.fillRect(invader.x, invader.y, invader.width, invader.height));
+            invaders.forEach(invader => {
+                ctx.fillStyle = invader.color; // Use the invader's color
+                ctx.fillRect(invader.x, invader.y, invader.width, invader.height);
+            });
         }
 
         function moveShip(direction) {
@@ -72,10 +93,17 @@
 
         function moveInvaders() {
             invaders.forEach(invader => invader.x += invaderDirection);
+
+            // Check if invaders need to move down
+            if (invaderMoveDown) {
+                invaders.forEach(invader => invader.y += invaderHeight);
+                invaderDirection *= -1;
+                invaderMoveDown = false;
+            }
+
             const edgeInvader = invaders[invaders.length - 1];
             if (edgeInvader.x + invaderWidth > canvas.width || invaders[0].x < 0) {
-                invaderDirection *= -1;
-                invaders.forEach(invader => invader.y += invaderHeight);
+                invaderMoveDown = true;
             }
         }
 
@@ -88,7 +116,8 @@
                         bullet.y < invader.y + invader.height &&
                         bullet.y + bulletHeight > invader.y
                     ) {
-                        invaders.splice(index, 1);
+                        // Clear all invaders in the same row
+                        invaders = invaders.filter(i => i.row !== invader.row);
                         bullets.splice(bullets.indexOf(bullet), 1);
                     }
                 });
